# RascalRunner

./: .gitignore  README.md  gitlab_wrapper.py  gitlabrecon.py  gitlabrunner.py  pyproject.toml  requirements.txt
rascalrunner/: app.py  cli.py  rascalrunner.py  reconrunner.py
